# specguard-agent

./: .env.example  .gitignore  README.md  SKILL.md  VIDEO_SCRIPT.md  agent.py  pyproject.toml
.github/workflows/: ci.yml
evals/: scenario_map.json  test_code_generator.py  test_evaluation_runner.py  test_llm_core.py  test_progress_tracker.py  test_security_scanner.py  test_spec_analyzer.py  test_task_manager.py
examples/: url-slug.feature  url_slug_response.md
memory/: progress.json
scripts/: assemble_site_video.py  generate_llm_demo_video.py  generate_video.py  rebuild_video.py  slides.py  website_demo.py
skills/code-generator/: SKILL.md
skills/progress-tracker/: SKILL.md
skills/security-scanner/: SKILL.md
skills/spec-analyzer/: SKILL.md
specs/: lider-travel.feature  task-manager.feature
src/: __init__.py  code_generator.py  evaluation_runner.py  llm_core.py  progress_tracker.py  security_scanner.py  spec_analyzer.py  task_manager.py
tmp_video/: concat.txt
tmp_video2/: concat.txt
tmp_video3/: concat.txt
tmp_video3/video_segs/: concat.txt
